# pallet-management-system

./: .gitignore  .replit  Pasted-Proje-Tan-m-Personelin-haftal-k-al-ma-takibinin-yap-ld-g-nl-k-puantajlar-n-tutuldu-u-haft-1731005973536.txt  Pasted-Projenin-ikinci-a-amas-i-in-Personel-Takip-a-a-daki-ad-mlar-eksiksiz-takip-ederek-sistemi-geli--1731008165580.txt  README.md  app.py  auth.py  download_images.py  models.py  push_to_github.py  pyproject.toml  replit.nix  requirements.txt  routes.py  seed_data.py  utils.py
static/css/: custom.css
static/js/: companies.js  dashboard.js  pallets.js
templates/: 403.html  404.html  500.html  base.html  companies.html  dashboard.html  login.html  pallet_details.html  pallet_form_modal.html  pallets.html  register.html
